# volodoc

./: .gitignore  Cargo.toml  README.md  api_doc.md  api_example.md  output  output.md
src/: doc_generator.rs  example_generator.rs  idl_parser.rs  main.rs  markdown_generator.rs  sample_data_generator.rs  utils.rs
src/templates/: api_template.md  struct_template.md
tests/: test.rs
